# Aegis

./: CONTRIBUTING.md  LICENSE  README.md  aegfmt.bat  aegfmt.py  aegis.bat  aegpm.bat  aegpm.py  aegtest.bat  aegtest.py  fix_git.bat  pyproject.toml  requirements.txt  setup.py  show_table.py  test_commands.txt  test_installation.py  test_payload_workflow.txt
aegis/: __init__.py  __main__.py  ast_nodes.py  async_runtime.py  builtins.py  class_runtime.py  env.py  error_handling.py  interpreter.py  lexer.py  modules.py  parser.py  repl.py  runner.py  runtime.py  security.py  stdlib_extensions.py
aegis_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: hello.aeg  web_scrape.aeg
tests/: test_basic.aeg  test_basic.py
